Revert "refactor: 💡 migrate model wrappers to kotlin"
This reverts commit 3b2890f749f2d1b668fed2de08f43b59c431cc1a.