@@ -100,7 +100,7 @@ public class WorkspaceWrapper {
         List<IWorkspace> iWorkspaces = SherlockEngine.storage.getWorkspaces(engineId);
 
         if (iWorkspaces.size() == 1) {
-            this.iWorkspace = iWorkspaces.getFirst();
+            this.iWorkspace = iWorkspaces.get(0);
         } else {
             throw new IWorkspaceNotFound("Unable to find workspace in engine.");
         }
@@ -235,10 +235,14 @@ public class WorkspaceWrapper {
      */
     public List<ITuple<ISubmission, ISubmission>> addSubmissions(SubmissionsForm submissionsForm) throws NoFilesUploaded, FileUploadFailed {
         int count = 0; //the number of submissions uploaded
-        List<ITuple<ISubmission, ISubmission>> collisions = new ArrayList<>();
-        boolean multiple = submissionsForm.getFiles().length == 1 && !submissionsForm.getSingle();
+        List<ITuple<ISubmission, ISubmission>> collisions = new ArrayList();
+        boolean multiple = false;
 
-        for(MultipartFile file : submissionsForm.getFiles()) {
+        if(submissionsForm.getFiles().length == 1 && !submissionsForm.getSingle()) {
+            multiple = true;
+        }
+
+	    for(MultipartFile file : submissionsForm.getFiles()) {
             if (file.getSize() > 0) {
                 try {
 	                collisions.addAll(SherlockEngine.storage.storeFile(this.getiWorkspace(), file.getOriginalFilename(), file.getBytes(), multiple));
@@ -290,7 +294,7 @@ public class WorkspaceWrapper {
      * @throws NoFilesUploaded if no files were uploaded
      */
     public long runTemplate(TemplateWrapper templateWrapper) throws TemplateContainsNoDetectors, ClassNotFoundException, ParameterNotFound, DetectorNotFound, NoFilesUploaded {
-		if (templateWrapper.template.detectors.isEmpty())
+		if (templateWrapper.getTemplate().detectors.isEmpty())
 		    throw new TemplateContainsNoDetectors("No detectors in chosen template.");
 
 		if (this.getFiles().isEmpty()) {
@@ -299,7 +303,7 @@ public class WorkspaceWrapper {
 
 		IJob job = this.iWorkspace.createJob();
 
-		for (TDetector td : templateWrapper.template.detectors) {
+		for (TDetector td : templateWrapper.getTemplate().detectors) {
             Class<? extends IDetector> detector = (Class<? extends IDetector>) Class.forName(td.name, true, SherlockEngine.classloader);
             job.addDetector(detector);
 		}
